--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,13 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
+        "php": "^7.3|^8.0",
         "ext-gd": "*",
-        "ext-random": "*",
         "symfony/filesystem": "^5.4 || ^6.4 || ^7.0",
         "symfony/finder": "^5.4 || ^6.4 || ^7.0",
         "symfony/process": "^5.4 || ^6.4 || ^7.0"
     },
     "require-dev": {
-        "pestphp/pest": "^1.21"
     },
     "autoload": {
         "psr-4": {
